twitter analysis done

--- a/nlp/netflix-sentimental-analysis/Netflix_Sentimental_Spacy.ipynb
+++ b/nlp/netflix-sentimental-analysis/Netflix_Sentimental_Spacy.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "6af11592",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "9553f2a0",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "4  a visually flashy but narratively opaque and e...     0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "5708d622",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "74f342d6",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "4  emerges rare issue movie honest keenly observe...     1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "dd69ef62",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "4  visually flashy narratively opaque emotionally...     0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "ef85b6d7",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "[10662 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "9d1c064e",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "e96e42b4",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "array([1, 1, 1, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "5cba6f1e",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "488943c4",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "[8529 rows x 2 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "23948fc9",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "[2133 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "13187ca0",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "631c70b4",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "022cf271",
    "metadata": {},
    "outputs": [
@@ -1953,7 +1953,7 @@
        " ...]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "5e209048",
    "metadata": {},
    "outputs": [
@@ -1975,7 +1975,7 @@
        "15966"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "472234f9",
    "metadata": {},
    "outputs": [
@@ -1996,7 +1996,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2005,7 @@
     "# 7. SVM\n",
     "\n",
     "from sklearn import svm\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
     "\n",
     "classifier = svm.SVC(kernel = 'linear')\n",
     "classifier.fit(train_vector, train_data['mood'])"
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "89af7b4a",
    "metadata": {},
    "outputs": [],
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "79914e81",
    "metadata": {},
    "outputs": [
@@ -2033,7 +2033,7 @@
        "0.7416783872480075"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,11 +2044,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "73c0f40c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d81585f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f28c077f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = GaussianNB()\n",
+    "model.fit(train_vector.toarray(), train_data['mood'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3e0f3308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaussion_pred = model.predict(test_vector.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "603a2cbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[623 430]\n",
+      " [307 773]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(test_data['mood'], gaussion_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "833e5a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6544772620721988\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(test_data['mood'], gaussion_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9e4734f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "380c6ed3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnb = MultinomialNB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "acdb7047",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnb.fit(train_vector, train_data['mood'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8c9c0bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnb_pred = mnb.predict(test_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1727a3d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7580872011251758\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(mnb_pred, test_data['mood']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "659eb484",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your text:I am good\n",
+      "Positive review\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing the MultinomialNB\n",
+    "\n",
+    "input_text = input('Enter your text:')\n",
+    "pred = mnb.predict(vectorizer.transform([input_text]).toarray())\n",
+    "if pred == 1:\n",
+    "    print('Positive review')\n",
+    "else:\n",
+    "    print('Negative review')"
+   ]
   }
  ],
  "metadata": {
