app for deploment

--- a/working-with-words/Word_Dictionary.ipynb
+++ b/working-with-words/Word_Dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "5eee3e2c",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "import string\n",
-    "from textblob import Word"
+    "from textblob import Word\n",
+    "from flask import Flask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "af414da8",
    "metadata": {},
    "outputs": [],
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "0d278070",
    "metadata": {},
    "outputs": [
@@ -41,11 +42,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the word: telephone\n",
+      "Enter the word: sex\n",
       "Your word has following synonyms:\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "1. Electronic Equipment That Converts Sound Into Electrical Signals That Can Be Transmitted Over Distances And Then Converts Received Signals Back Into Sounds\n",
-      "2. Transmitting Speech At A Distance\n",
+      "1. Activities Associated With Sexual Intercourse\n",
+      "2. Either Of The Two Categories (Male Or Female) Into Which Most Organisms Are Divided\n",
+      "3. All Of The Feelings Resulting From The Urge To Gratify Sexual Impulses\n",
+      "4. The Properties That Distinguish Organisms On The Basis Of Their Reproductive Roles\n",
+      "5. Stimulate Sexually\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -60,6 +64,14 @@
     "    print(f'{i+1}. {synonyms[i].title()}')\n",
     "print('-'*100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23fb0ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
