Logistic regression Mine Rock

--- a/working-with-words/Word_Dictionary.ipynb
+++ b/working-with-words/Word_Dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "5eee3e2c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "0d278070",
    "metadata": {},
    "outputs": [
@@ -42,14 +42,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the word: sex\n",
+      "Enter the word: hi\n",
       "Your word has following synonyms:\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "1. Activities Associated With Sexual Intercourse\n",
-      "2. Either Of The Two Categories (Male Or Female) Into Which Most Organisms Are Divided\n",
-      "3. All Of The Feelings Resulting From The Urge To Gratify Sexual Impulses\n",
-      "4. The Properties That Distinguish Organisms On The Basis Of Their Reproductive Roles\n",
-      "5. Stimulate Sexually\n",
+      "1. An Expression Of Greeting\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -67,8 +63,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "36d83ea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'flask' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-2c1dabb5cff1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mflask\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'flask' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "23fb0ac2",
+   "id": "ca778ff7",
    "metadata": {},
    "outputs": [],
    "source": []
